# omnicide_tools

./: CMakeLists.txt  README.md  qc_to_xml.sln
qc_to_xml/: CMakeLists.txt  Entry.cpp  Entry.h  Groups.cpp  Groups.h  QCParser.cpp  QCParser.h  main.cpp  qc_to_xml.vcxproj  qc_to_xml.vcxproj.filters
